--- a/flanaganthesis.tex
+++ b/flanaganthesis.tex
@@ -222,13 +222,15 @@ spatial abstractions
 declarative / clp framework
 
 \section{Representation}
+Current CAAD tools represent the physical and structural aspects of a design in a manner that is both accurate and precise. This type of representation captures the design, in terms of the precise spatial configurations as they are comprised of the architectural entities (i.e., walls, doors, windows), at a low-level of granularity that is needed in the actual construction of the building. Such a representation allows a designer to reason about the physical, structural and mechanical aspects of a design, such as the precise placement of a door in a wall or the mechanics of a window swinging open. However, this type of representation scheme does not incorporation the semantic features of the design nor the design's qualitative architectural attributes \cite{Bhatt}.
 
+This section looks at how the DSpace reasoner represents a design in a multiple perspective manner that incorporates, (1) the semantic extension of architectural entities (artefactual extensions), (2) the spatial abstractions of the design from a qualitative spatial perspective, and (3) the physical and structural quantitative geometries of the design. The remainder of this section looks at the three segments of the DSpace representation and shows how they are formally modeled in Prolog. 
 
 \subsection{Multiple Perspectives}
-Designs are represented in DSpace in multiple perspectives. Unlike current CAAD systems that only represent the physical and structural elements of a design, DSpace represents the artefactual aspects, non-spatial extensions of an architectural entity that pertains to a specific functional quality of the entity and the design.   
+Designs are represented in DSpace with multiple perspectives. Unlike current CAAD systems that only represent the physical and structural elements of a design, DSpace represents the artefactual aspects, non-spatial extensions of an architectural entity that pertains to a specific functional quality of the entity in the context of the design. Representing the design in a multiple perspective manner allows the tools to go beyond reasoning that is purely based on the physical and structural geometries of the design.
 
 \subsubsection{Spatial Artefacts}
-Spatial artefacts are non-spatial extensions of architectural entities that pertain to a specific functional quality of the entity in the context of the design. Because artefactual extensions do not have a physical manifestation, they are not represented in current CAAD tools. However, they become an important part of the design process because they effect the performance and functionality of a design. There are three types of spatial artefacts identified by Bhatt\cite{Bhatt}:
+Spatial artefacts are non-spatial extensions of architectural elements that pertain to a specific functional quality of the element in the context of the design. Because artefactual extensions do not have a physical manifestation, they are not represented in current CAAD tools. However, they become an important part of the design process because they effect the functionality and performance of a design. There are three types of spatial artefacts identified by Bhatt\cite{Bhatt}:
 
 \begin{enumerate}
 \item the \emph{operational space} encompasses the region of space required by an object to preform it's function (i.e., doorway opening and closing)
@@ -247,13 +249,13 @@ Spatial artefacts are non-spatial extensions of architectural entities that pert
 \label{multi-perspectives}
 \end{figure}
 
-Artefactual extensions can effect how a design preforms. For example, a sink in a bathroom has a functional space in-which a person uses the sink to wash his or her hands. If this space is interfered by the functional or physical space of a doorways into the bathroom, then there will be circulation problems when a person is washing their hands and another person enters the bathroom.
+Artefactual extensions effect how a design preforms. For example, a sink in a bathroom has a functional space, the space a person uses the sink to wash his or her hands. If this space is interfered with by the functional or physical space of a doorways, then this will cause a circulation problems when a person is washing their hands and another person enters the bathroom.
 
 TODO: fig:sink example.
 
 
 \subsubsection{Representation A Design in DSpace}
-The representation of a design starts with a factbase in Prolog that links architectural entities (via a unique identifier) to is't architectural type (wall, door, window, column) or interior design type (display case, chair, desk). There is a single entry in the factbase for each entity in the design. The following Prolog code shows one entry for the prototype of the factbase predicate and three instantiated entries for a single door, wall, and desk. 
+The representation of a design starts with a factbase in Prolog that links architectural entities (via a unique identifier) to is't architectural type (wall, door, window, column) or interior design type (display case, chair, desk). There is a single entry for each entity in the design in the factbase. The following Prolog code shows a single entry for the prototype of a factbase predicate and three instantiated entries for a doorway, wall, and desk. 
 
 \begin{verbatim}
    architectural_entity(ID, Type).
