--- a/flanaganthesis.tex
+++ b/flanaganthesis.tex
@@ -224,11 +224,11 @@ declarative / clp framework
 \section{Representation}
 Current state-of-the-art CAAD tools represent the physical and structural aspects of a design in a manner that is both accurate and precise. This type of representation captures the design, in terms of the precise spatial configurations as they are comprised of the architectural entities (i.e., walls, doors, windows), at a low-level of granularity that is needed in the actual construction of the building. Such a representation allows a designer to reason about the physical, structural and mechanical aspects of a design, such as the precise placement of a door in a wall or the mechanics of a window swinging open and closed. However, this type of representation scheme does not incorporation the semantic features of the design nor the design's qualitative architectural attributes. 
 
-For example, a structural design requirement that addresses air circulation stipulates that a doorway and window should face directly towards each other. From a traditional CAAD based system, reasoning about such a requirement is not possible because it pertains to spatial and design semantics that go beyond the geometric representation of the system, i.e., in this case the qualitative relationship between architectural element. In DSpace, this type of requirement is represented in a multiple perspective design structure that incorporates the design's artefactual extensions, qualitative somethings, and quantitative geometries. This representation scheme allows a architect to validate a work-in-progress design from a conceptual and qualitative perspective against the physical and precise real world geometrical representation of the design \cite{Bhatt}.
+For example, a structural design requirement that addresses air circulation stipulates that a doorway and window should face directly towards each other. From a traditional CAAD based system, reasoning about such a requirement is not possible because it pertains to spatial and design semantics that go beyond the geometric representation of the system, i.e., in this case the qualitative relationship between architectural element. In DSpace, this type of requirement is represented in a multiple perspective design structure that incorporates the design's artefactual extensions, qualitative somethings, and quantitative geometries and an architect to validate a work-in-progress design from a conceptual and qualitative perspective against the physical and precise real world geometrical representation of the design \cite{Bhatt}.
 
-TODO: fig:representation hierarchy
+TODO: fig:multiple perspective representation
 
-This section looks at the multiple perspective design representation of the DSpace reasoner. The structure of this section is divided into three subsections, each pertaining to a perspective of the design representation: (1) artefactual extension, (2) spatial abstraction, and (3) physical and structural geometries. The last subsection shows how they are formally modeled in Prolog. 
+This remainder of this section is structured as follows. The first subsection looks at the multiple perspective design representation of the DSpace reasoner. The second subsection looks at how they are each perspective is modeled in DSpace. Section last section looks at how a design in imported into the DSpace reasoner from the DsSchema and IFC format.
 
 \subsection{Multiple Perspectives}
 Designs are represented in the DSpace reasoner in a multiple perspective manner that incorporates: (1) the artefactual extension of architectural entities, (2) the spatial abstractions of the design from a qualitative spatial perspective, and (3) the physical and structural quantitative geometries of the design. Representing the design in a multiple perspective manner allows the DSpace reasoner to go beyond purely geometric reasoning that is based on the physical and structural geometries of the design.
