--- a/flanaganthesis.tex
+++ b/flanaganthesis.tex
@@ -236,16 +236,16 @@ Spatial artefacts are non-spatial extensions of architectural entities that pert
 \item the \emph{range space} pertains to a region of space that encompass the range of a camera's view or the range of a motion sensor (i.e., range space of camera as defined by is depth of field and angle of view).
 \end{enumerate}
 
-\begin{figure}[H]
- \centering
- \subfloat[functional space]{\label{fig:functional-space}\includegraphics[width=40mm]{functional-space}}
- \hspace{10 mm}
- \subfloat[operational space]{\label{fig:operational-space}\includegraphics[width=40mm]{operational-space}}
- \hspace{10 mm}
- \subfloat[range space]{\label{fig:range-space}\includegraphics[width=40mm]{functional-space}}
- \caption{Multiple Perspectives}
-\label{multi-perspectives}
-\end{figure}
+%\begin{figure}[H]
+% \centering
+% \subfloat[functional space]{\label{fig:functional-space}\includegraphics[width=40mm]{functional-space}}
+% \hspace{10 mm}
+% \subfloat[operational space]{\label{fig:operational-space}\includegraphics[width=40mm]{operational-space}}
+% \hspace{10 mm}
+% \subfloat[range space]{\label{fig:range-space}\includegraphics[width=40mm]{functional-space}}
+% \caption{Multiple Perspectives}
+%\label{multi-perspectives}
+%\end{figure}
 
 Artefactual extensions can effect how a design preforms. For example, a sink in a bathroom has a functional space in-which a person uses the sink to wash his or her hands. If this space is interfered by the functional or physical space of a doorways into the bathroom, then there will be circulation problems when a person is washing their hands and another person enters the bathroom.
 
