--- a/flanaganthesis.tex
+++ b/flanaganthesis.tex
@@ -222,7 +222,7 @@ spatial abstractions
 declarative / clp framework
 
 \section{Representation}
-Current state-of-the-art CAAD tools represent the physical and structural aspects of a design in a manner that is both accurate and precise. This type of representation captures the design, in terms of the precise spatial configurations as they are comprised of the architectural entities (i.e., walls, doors, windows), at a low-level of granularity that is needed in the actual construction of the building. Such a representation allows a designer to reason about the physical, structural and mechanical aspects of a design, such as the precise placement of a door in a wall or the mechanics of a window swinging open and closed. However, this type of representation scheme does not incorporation the semantic features of the design nor the design's qualitative architectural attributes. 
+CAAD tools represent the physical and structural aspects of a design in a manner that is both accurate and precise. This type of representation captures the design, in terms of the precise spatial configurations as they are comprised of the architectural entities (i.e., walls, doors, windows), at a low-level of granularity that is needed in the actual construction of the building. Such a representation allows a designer to reason about the physical, structural and mechanical aspects of a design, such as the precise placement of a door in a wall or the mechanics of a window swinging open and closed. However, this type of representation scheme does not incorporation the semantic features of the design nor the design's qualitative architectural attributes. 
 
 For example, a structural design requirement that addresses air circulation stipulates that a doorway and window should face directly towards each other. From a traditional CAAD based system, reasoning about such a requirement is not possible because it pertains to spatial and design semantics that go beyond the geometric representation of the system, i.e., in this case the qualitative relationship between architectural element. In DSpace, this type of requirement is represented in a multiple perspective design structure that incorporates the design's artefactual extensions, qualitative somethings, and quantitative geometries and an architect to validate a work-in-progress design from a conceptual and qualitative perspective against the physical and precise real world geometrical representation of the design \cite{Bhatt}.
 
