--- a/flanaganthesis.tex
+++ b/flanaganthesis.tex
@@ -243,22 +243,22 @@ There are three types of spatial artefacts identified by Bhatt\cite{Bhatt}:
 \item \emph{range space} 
 \end{enumerate}
 
-The operational space encompasses the region of space required by an object to preform it's function (i.e., doorway opening and closing).
-
-The functional space encompasses the region of space that is required by a person to operate an object (i.e., space for operating a doorway)
-
-The range space pertains to a region of space that encompass the range of a camera's view or the range of a motion sensor (i.e., range space of camera as defined by is depth of field and angle of view).
-
 \begin{figure}[H]
  \centering
- \subfloat[functional space]{\label{fig:functional-space}\includegraphics[width=40mm]{functional-space}}
- \hspace{10 mm}
- \subfloat[operational space]{\label{fig:operational-space}\includegraphics[width=40mm]{operational-space}}
- \hspace{10 mm}
- \subfloat[range space]{\label{fig:range-space}\includegraphics[width=40mm]{functional-space}}
- \caption{Multiple Perspectives}
-\label{multi-perspectives}
+ \subfloat[operational space]{\label{operational-space}\includegraphics[width=36mm]{operational-space}}
+ \hspace{9 mm}
+ \subfloat[functional space]{\label{functional-space}\includegraphics[width=35mm]{functional-space}}
+  \hspace{9 mm}
+ \subfloat[range space]{\label{range-space}\includegraphics[width=36mm]{operational-space}}
+ \caption{Artefactual Extensions}
+\label{artefactual-extensions}
 \end{figure}
+
+The operational space encompasses the region of space required by an object to preform it's function (i.e., doorway opening and closing). For example, the operational space of a door is the area in which a door can occupy during it's operation (see figure \ref{operational-space}). This space is dynamic in the sense that it represents the all possible location of the door. 
+
+The functional space encompasses a region of space that is required for the object to function or for a person to operate (i.e., space for operating a doorway). For example, the functional space of a doorway is the total area needed for a person to operate, open and close, as well as any additional space need to navigate entirely through the door (see figure \ref{functional-space}). 
+
+The range space pertains to a region of space that encompass the range of a camera's view or the range of a motion sensor. For example, the range space of a camera is defined by its depth of field and angle of view. It represents the total space that is under surveillance of the camera (see figure \ref{range-space}).
 
 Artefactual extensions effect how a design preforms. For example, a sink in a bathroom has a functional space, the space a person uses the sink to wash his or her hands. If this space is interfered with by the functional or physical space of a doorways, then this will cause a circulation problems when a person is washing their hands and another person enters the bathroom.
 
