--- a/flanaganthesis.tex
+++ b/flanaganthesis.tex
@@ -222,16 +222,16 @@ spatial abstractions
 declarative / clp framework
 
 \section{Representation}
-CAAD tools represent the physical and structural aspects of a design in a manner that is both accurate and precise. This type of representation captures the design, in terms of the precise spatial configurations as they are comprised of the architectural entities (i.e., walls, doors, windows), at a low-level of granularity that is needed in the actual construction of the building. Such a representation allows a designer to reason about the physical, structural and mechanical aspects of a design, such as the precise placement of a door in a wall or the mechanics of a window swinging open and closed. However, this type of representation scheme does not incorporation the semantic features of the design nor the design's qualitative architectural attributes. 
+CAAD tools represent the physical and structural aspects of a design in a manner that is both accurate and precise. This type of representation captures the design, in terms of the spatial configurations as they are comprised of the architectural entities (i.e., walls, doors, windows), at a low-level of granularity that is needed in the actual construction of the building. Such a representation allows an architect to reason about the physical, structural and mechanical aspects of a design, such as the precise placement of a door in a wall or the mechanics of a window swinging open and closed. However, this type of representation scheme does not incorporation the qualitative and functional features of the design. For example, a structural design requirement that addresses air circulation stipulates that a doorway and window should face directly towards each other. For a traditional CAAD based system, reasoning about such a requirement is not possible because it pertains to qualitative spatial design features and functional attributes that go beyond the purely geometric representation of the design, i.e., in this case the qualitative spatial relationship between a window and doorway. 
 
-For example, a structural design requirement that addresses air circulation stipulates that a doorway and window should face directly towards each other. From a traditional CAAD based system, reasoning about such a requirement is not possible because it pertains to spatial and design semantics that go beyond the geometric representation of the system, i.e., in this case the qualitative relationship between architectural element. In DSpace, this type of requirement is represented in a multiple perspective design structure that incorporates the design's artefactual extensions, qualitative somethings, and quantitative geometries and an architect to validate a work-in-progress design from a conceptual and qualitative perspective against the physical and precise real world geometrical representation of the design \cite{Bhatt}.
+In DSpace this type of requirement can be reasoned about because the design is represented in a multiple perspective structure that incorporates the design's artefactual extensions, qualitative spatial relationships, and quantitative geometries. This representation allows an architect to validate a work-in-progress design from a conceptual and qualitative perspective against the physical and precise real world geometrical representation of the design \cite{Bhatt}.
 
 TODO: fig:multiple perspective representation
 
-This remainder of this section is structured as follows. The first subsection looks at the multiple perspective design representation of the DSpace reasoner. The second subsection looks at how they are each perspective is modeled in DSpace. Section last section looks at how a design in imported into the DSpace reasoner from the DsSchema and IFC format.
+This remainder of this section is structured as follows. The first subsection looks at the multiple perspective design representation of the DSpace reasoner. The second subsection looks at how each perspective is formally modeled (coded) in DSpace. The last section looks at how a real world design from a state-of-the-art architectural design tool is imported into the DSpace reasoner from the DsSchema and IFC format.
 
 \subsection{Multiple Perspectives}
-Designs are represented in the DSpace reasoner in a multiple perspective manner that incorporates: (1) the artefactual extension of architectural entities, (2) the spatial abstractions of the design from a qualitative spatial perspective, and (3) the physical and structural quantitative geometries of the design. Representing the design in a multiple perspective manner allows the DSpace reasoner to go beyond purely geometric reasoning that is based on the physical and structural geometries of the design.
+In DSpace designs are represented in multiple perspectives that incorporate: (1) the artefactual extension of architectural entities, (2) the spatial abstractions of the design from a qualitative spatial perspective, and (3) the physical geometries that pertain to the quantitative structures of the design. The multiple presepective representation of DSpace allows reasoning about design requirements that go beyond purely quantitative geometric reasoning.
 
 \subsubsection{Spatial Artefacts}
 Unlike current state-of-the-art CAAD systems that only represent the physical and structural elements of a design, DSpace represents spatial artefacts, non-spatial extensions of architectural elements that pertain to a specific functional quality of the element in the context of the design. Artefactual extensions do not have a physical manifestation, however, they become an important part of the design process because they effect the functionality and performance of a design. 
